Bug 400545 - renaming object in workspace doesn't like underscore
Summary: renaming object in workspace doesn't like underscore
Status: RESOLVED FIXED
Alias: None
Product: rkward
Classification: Applications
Component: User Interface (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: RKWard Team
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-11-01 11:45 UTC by Jan
Modified: 2018-11-01 12:37 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jan 2018-11-01 11:45:15 UTC
SUMMARY
RKWard 0.7.0b

STEPS TO REPRODUCE
1. Start RKWard.
2. Create or open R-script.
3. Create an object (e.g. test <- 1).
4. Select object "test" in workspace.
5. Open contextmenu (right mouse click) of object.
6. Select rename (in German "Umbenennen")
7. Give a new name with that includes an underscore, e.g. test_1

OBSERVED RESULT
A message is diplayed: "Der angegebene Name wird bereits verwendet oder ist nicht gültig. Umbenannt zu test.1"

(My sloppy translation: The given name is used already or not valid. Renamed to test.1)

EXPECTED RESULT
Object will be renamed to test_1

SOFTWARE VERSIONS
RKWard 0.7.0b
KDE Frameworks 5.44.0
Qt 5.9.5
Kubuntu 18.04

ADDITIONAL INFORMATION
Without problem objects with underscored names can be created (e.g. test_1 <- 1). So it is weird that it isn't possible to rename the object in RKWard.
Comment 1 Thomas Friedrichsmeier 2018-11-01 12:37:35 UTC
Git commit a525193f49c5bf76124a28bd80b831f793bb883b by Thomas Friedrichsmeier.
Committed on 01/11/2018 at 12:35.
Pushed by tfry into branch 'master'.

Accept underscore in name of new data.frames.

M  +1    -0    ChangeLog
M  +1    -1    rkward/core/rcontainerobject.cpp

https://commits.kde.org/rkward/a525193f49c5bf76124a28bd80b831f793bb883b