Accept underscore in name of new data.frames.

BUG: 400545